# dynamics-benchmark

./: README.md
benchmarker/: config.py  main.py  pyproject.toml
benchmarker/core/: __init__.py  case.py  instance.py  plotter.py  results.py  results_loader.py  runner.py  save_utils.py
benchmarker/data/: time.json
benchmarker/data/instances/: 1.pckl  10.pckl  2.pckl  3.pckl  4.pckl  5.pckl  6.pckl  7.pckl  8.pckl
benchmarker/data/instances/hessian/2/: precision_2_timepoints_2.json  precision_2_timepoints_4.json  precision_2_timepoints_5.json
benchmarker/data/instances/hessian/4/: precision_3_timepoints_2.json  precision_3_timepoints_3.json  precision_3_timepoints_4.json
benchmarker/data/instances/hessian/7/: precision_2_timepoints_4.json
benchmarker/data/instances/norm/1/: precision_2_timepoints_3.json  (+2 more)
benchmarker/scripts/: example_plot.py  p.py  plot_dynamics.py  plot_success_prob_by_ta.py  plot_tta_comparison.py
dwdynamics/: README.md  pyproject.toml
dwdynamics/data/: time_june.json
dwdynamics/data/instances/: 1.pckl  3.pckl  4.pckl  6.pckl  8.pckl
dwdynamics/notebooks/: 02 - Full Workflow (Qubit).ipynb  approx.ipynb  plots.ipynb  tests.ipynb  velox_instances.ipynb
dwdynamics/scripts/: dwave_test.py  run_xubo.sh
dwdynamics/src/dwdynamics/: __init__.py  clock.py  complex_embeddings.py  draw_utils.py  fixed_point.py  helpers.py  instance.py  operators.py  problems.py  qubo.py
dwdynamics/velox/results/: best_results_pruned_1_default.csv  best_results_pruned_1_embedded.csv  best_results_pruned_1_native.csv  plot.py
scripts/: run_simulated.py
(+99 files in other folders)
