[tool.poetry]
name = "benchmarker"
version = "0.1.0"
description = "DWDynamics Benchmarker"
authors = ["Philipp Hanussek <p.hanussek@etu.sorbonne-universite.fr>"]

[tool.poetry.dependencies]
python = "^3.11"
dwdynamics = { path = "../dwdynamics", develop = true }
dwave-neal = "^0.6.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
